fixed overflow links

--- a/_sass/common/_base.sass
+++ b/_sass/common/_base.sass
@@ -37,5 +37,7 @@ body
   @extend %page-content-spacing
 
 .post-content
+  word-wrap: break-word
+
   p, a, strong, span, blockquote
     @extend %secondary-font-family
